# DynMiner2

./: .gitmodules  CMakeLists.txt  DynMiner2.sln  README.md
DynMiner2/: DynMiner2.cpp  DynMiner2.vcxproj  DynMiner2.vcxproj.filters  Makefile  cBlockMonitor.cpp  cBlockMonitor.h  cGetWork.cpp  cGetWork.h  cMiner.cpp  cMiner.h  cProgramVM.cpp  cProgramVM.h  cStatDisplay.cpp  cStatDisplay.h  cSubmitter.cpp  cSubmitter.h  config.json  dyn_miner2.cl  dyn_miner2_old.cl  dyn_miner3 - original.cl  dyn_miner3.cl  sha256.cpp  test_algo.txt  version.h
enc_temp_folder/71d49bd254c2d837f89a1a5dc66ddfa/: DynMiner2.cpp
enc_temp_folder/7a7024ff62ce30bd1d3f5b5d27d13931/: DynMiner2.cpp
enc_temp_folder/ad6f4c90b3add2afbc56eb21d857783/: cMiner.cpp
enc_temp_folder/ecbd22581a654648f19ea145ec5fb25c/: cGetWork.h
enc_temp_folder/fa6fac841e4da77e744cc7acc75f90/: cStatDisplay.h
enc_temp_folder/fca54f1fd6acc27f76772e2d52bbfe23/: cSubmitter.cpp
enc_temp_folder/fe29feb43cb3162a28d267927dbddf4/: cSubmitter.h
src/: DynMiner2.cpp  DynMiner2.vcxproj.filters  cGetWork.cpp  cMiner.cpp  cMiner.h  cStatDisplay.cpp  dyn_miner2.cl  hex.h  struct.h  version.h
